--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include ':app'
 include ':feature'
 include ':feature:pokemons'
 include ':feature:pokemons:routing'
+include ':feature:pokemons:ui'
