Add groove plugins

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,9 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Pokemons"
+includeBuild("build-logic")
+
+
 include ':app'
 include ':feature'
 include ':feature:pokemons'
