--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ kotlin = "1.7.21"
 coroutines = "1.6.0"
 compose = "1.3.3"
 composeMaterial = "1.3.1"
-composeCompiler = "1.4.0-alpha02"
+composeCompiler = "1.4.2"
 accompanist = "0.28.0"
 coil = "2.0.0"
 lifecycle = "2.5.1"
