Add core module

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,5 @@ include ':feature'
 include ':feature:pokemons'
 include ':feature:pokemons:routing'
 include ':feature:pokemons:ui'
+include ':core:data'
+include ':core:domain'
