Add dagger app component

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    alias(libs.plugins.anvil)
 }
 
 android {
@@ -48,6 +50,8 @@ android {
 
 dependencies {
     implementation libs.bundles.androidUiLibs
+    implementation libs.dagger
+    kapt libs.daggerCompiler
 
     implementation project(":feature:pokemons:routing")
 }
