--- a/settings.gradle
+++ b/settings.gradle
@@ -19,7 +19,8 @@ includeBuild("build-logic")
 include ':app'
 include ':feature'
 include ':feature:pokemons'
-include ':feature:pokemons:routing'
 include ':feature:pokemons:ui'
+include ':feature:pokemons:data'
+include ':feature:pokemons:routing'
 include ':core:data'
 include ':core:domain'
