--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation libs.dagger
     kapt libs.daggerCompiler
 
+    implementation project(':core:domain')
     implementation project(":feature:pokemons:routing")
 }
