--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,9 @@ vkSdk = "3.5.1"
 appAuth = "0.11.1"
 dentGigastore = "1.0.0"
 kotlinPoet = "1.12.0"
+okhttp3 = "4.9.1"
+retrofit2 = "2.9.0"
+coroutine_adapter = "0.9.2"
 
 [libraries]
 androidXAnnotations = { module = "androidx.annotation:annotation", version.ref = "androidXAnnotation" }
@@ -176,8 +179,20 @@ dentGigastore = { module = "com.github.dent-jitpack:gigastore-android-sdk", vers
 
 kotlinPoet = { module = "com.squareup:kotlinpoet", version.ref = "kotlinPoet" }
 
+okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
+okhttp3_interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3" }
+
+retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
+retrofit2_converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit2" }
+retrofit2_adapter = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "coroutine_adapter" }
+
 [bundles]
 coreLibs = [
+    "okhttp3",
+    "okhttp3_interceptor",
+    "retrofit2",
+    "retrofit2_converter",
+    "retrofit2_adapter",
     "kotlinCoroutinesCore",
     "kotlinCoroutinesAndroid",
     "kotlinResult",
