Add core ui module

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':feature:pokemons:ui'
 include ':feature:pokemons:data'
 include ':feature:pokemons:domain'
 include ':feature:pokemons:routing'
+include ':core:ui'
