Add navigation module

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,5 @@ include ':feature:pokemons:data'
 include ':feature:pokemons:domain'
 include ':feature:pokemons:routing'
 include ':core:ui'
+include ':core:routing'
+include ':navigation'
