--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,6 @@ include ':feature:pokemons:routing'
 include ':core:ui'
 include ':core:routing'
 include ':navigation'
+include ':feature:bottombar'
+include ':feature:bottombar:ui'
+include ':feature:bottombar:domain'
