--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':navigation'
 include ':feature:bottombar'
 include ':feature:bottombar:ui'
 include ':feature:bottombar:domain'
+include ':feature:app'
